k8s/manifests-9f2197/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-9f2197
  namespace: journee
  labels:
    app: journee-9f2197
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-9f2197
  template:
    metadata:
      labels:
        app: journee-9f2197
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-9f2197
          image: gcr.io/my-docker-471807/journee:v5.0.0
          ports:
            - containerPort: 3000
