k8s/manifests-9f2197/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-9f2197
  namespace: journee
spec:
  selector:
    app: journee-9f2197
  ports:
    - port: 80
      targetPort: 3000
